--- a/templates/https-letsencrypt.conf.j2
+++ b/templates/https-letsencrypt.conf.j2
@@ -16,4 +16,5 @@ server {
 
     ssl_certificate /etc/letsencrypt/live/{{ inventory_hostname }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ inventory_hostname }}/privkey.pem;
+    include /etc/nginx/conf.d/{{ inventory_hostname }}.*.locations;
 }
